inc/admin/css/theme-customizer-control.css
/* ... */
.in-sub-panel #tc-donate-customizer,
.in-sub-panel .tc-cta-wrap {
  left: -450px;
}
.rtl .in-sub-panel #tc-donate-customizer,
.rtl .in-sub-panel .tc-cta-wrap {
  right: -450px;
}
.tc-grid-control-section {
  width: 100%;
  float: left;
  clear: both;
  margin-bottom: 8px;
}
.tc-grid-toggle-controls {
  font-size: 15px;
  text-transform: uppercase;
  font-weight: bold;
  clear: both;
  width: 100%;
  display: block;
  float: left;
  margin: 15px 0;
  cursor: pointer;
  color: #1ABC9C;
}
.tc-grid-toggle-controls::before {
  content: '+';
  font-size: 21px;
  display: block;
  float: left;
  background: #1ABC9C;
  padding: 5px;
  line-height: 12px;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
  color: #FFF;
  margin-right: 5px;
  bottom: 2px;
  width: 12px;
  height: 12px;
  text-align: center;
  position: relative;
}

.tc-grid-toggle-controls.open::before {
  content: '-';
  line-height: 11px;
}
.tc-grid-design-controls {
  border-left: 2px dotted #1ABC9C;
  width: 89%;
  float: left;
  background: #F5F5F5;
  -webkit-border-radius: 0 5px 5px 0;
  -moz-border-radius: 0 5px 5px 0;
  border-radius: 0 5px 5px 0;
}
.appended > .tc-grid-design-controls {
  padding: 5%;
}
.tc-grid-design {
  border-left: 2px dotted #1ABC9C;
  margin-left: 3%;
  padding-left: 3%;
  width: 93%;
  font-style: italic;
}
.customize-control .tc-navigate-to-post-list {
  color: #1ABC9C;
  font-weight: bold;
  float: left;
  clear: both;
  width: 100%;
  margin-bottom: 8px;
}

.tc-sub-control {
  padding-left: 13%;
  max-width: 87%;
  position: relative;
}

.tc-sub-control:before {
  content: '';
  height: 116%;
  background: #1ABC9C;
  width: 2%;
  position: absolute;
  left: 7%;
}

/* Rate link */
#customize-footer-actions .collapse-sidebar-label {
  display: none;
}
.tc-rate-link {
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 4px 12px;
  font-size: 10px;
  line-height: 14px;
  width: 90%;
  text-align: right;
}
.wp-full-overlay.collapsed .tc-rate-link {
  display: none;
}
.tc-rate-link .tc-stars {
  color: #E6B800;
  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.6);
}
/* Cropped Image style */
/* Unified with the default cropped_image CSS */
.customize-control-tc_cropped_image .upload-button {
  float: right;    
}
.customize-control-tc_cropped_image .remove-button {
  float: left;
  margin-right: 3px;
}
.customize-control-tc_cropped_image .actions {
  margin-bottom: 32px;
}
.customize-control-tc_cropped_image .current {
  margin-bottom: 8px;
}
.customize-control-tc_cropped_image .upload-button,
.customize-control-tc_cropped_image .remove-button {
  white-space: normal;
  width: 48%;
  height: auto;
}

.customize-control-tc_cropped_image .current .container {
  min-height: 40px;
  overflow: hidden;
  border: 1px solid #eee;
  -webkit-border-radius: 2px;
  border-radius: 2px;
}
.customize-control-tc_cropped_image img {
  width: 100%;
  -webkit-border-radius: 2px;
  border-radius: 2px;
}
.customize-control-tc_cropped_image .inner {
  line-height: 20px;
  top: 10px;
}
/* rtl */
/* end tc cropped image */
.rtl .customize-control-tc_cropped_image .upload-button {
  float: left;    
}
.rtl .customize-control-tc_cropped_image .remove-button {
  float: right;
  margin-left: 3px;
}

